--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         </div>
       </section>
     </header>
-
+    <!-- buttons section  -->
     <section class="w-11/12 mx-auto py-10 space-y-5">
       <h2 class="text-2xl font-bold">
         Welcome to Pay<span class="text-primary">oo</span>
@@ -74,11 +74,17 @@
         low and
       </p>
       <div class="buttons grid grid-cols-3 gap-3">
-        <button class="btn flex-col h-full py-4 btn-primary btn-soft">
+        <button
+          onclick="showOnly('add-money')"
+          class="btn flex-col h-full py-4 btn-primary btn-soft"
+        >
           <img src="./assets/opt-1.png" alt="" />
           <p>Add Money</p>
         </button>
-        <button class="btn flex-col h-full py-4 btn-primary btn-soft">
+        <button
+          onclick="showOnly('cashout')"
+          class="btn flex-col h-full py-4 btn-primary btn-soft"
+        >
           <img src="./assets/opt-2.png" alt="" />
           <p>Cashout</p>
         </button>
@@ -94,7 +100,7 @@
           <img src="./assets/opt-5.png" alt="" />
           <p>Pay Bill</p>
         </button>
-        <button class="btn flex-col h-full py-4 btn-primary btn-soft">
+        <button onclick="showOnly('history')" class="btn flex-col h-full py-4 btn-primary btn-soft">
           <img src="./assets/opt-6.png" alt="" />
           <p>Transactions</p>
         </button>
@@ -102,13 +108,16 @@
     </section>
 
     <!-- add money section  -->
-    <section id="add-money" class="w-11/12 mx-auto py-5">
+    <section id="add-money" class="hidden w-11/12 mx-auto py-5">
       <h2 class="text-xl font-bold">Add Money</h2>
       <div class="card bg-base-100 w-full shadow rounded-2xl">
         <div class="card-body">
           <fieldset class="fieldset">
             <label class="label text-neutral font-bold">Select a Bank</label>
-            <select id="add-money-bank"  class="select rounded-full bg-base-200 w-full">
+            <select
+              id="add-money-bank"
+              class="select rounded-full bg-base-200 w-full"
+            >
               <option disabled selected>Pick a Bank</option>
               <option value="Prime">Prime</option>
               <option value="City">City</option>
@@ -150,8 +159,11 @@
               placeholder="Enter 4 digit pin number"
             />
 
-            <button id="add-money-btn" class="btn btn-primary mt-4 rounded-full">
-                Add Money
+            <button
+              id="add-money-btn"
+              class="btn btn-primary mt-4 rounded-full"
+            >
+              Add Money
             </button>
           </fieldset>
         </div>
@@ -159,7 +171,7 @@
     </section>
 
     <!-- cashout section  -->
-    <section id="cashout" class="w-11/12 mx-auto py-5">
+    <section id="cashout" class="hidden w-11/12 mx-auto py-5">
       <h2 class="text-xl font-bold">Cashout</h2>
       <div class="card bg-base-100 w-full shadow rounded-2xl">
         <div class="card-body">
@@ -204,7 +216,18 @@
       </div>
     </section>
 
+    <!-- transaction history -->
+    <section id="history" class="hidden w-11/12 mx-auto py-5">
+      <h2 class="text-xl font-bold">Transactions</h2>
+      <div class="space-y-5" id="history-container">
+
+      </div>
+    </section>
+
+    <!-- ------------------------------------------------- -->
     <script src="./script/machine.js"></script>
+    <!-- ------------------------------------------------- -->
+    <script src="./script/addMoney.js"></script>
     <script src="./script/cashout.js"></script>
   </body>
 </html>
